--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,119 @@
-.App {
-  text-align: center;
+* {
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html,
+body {
+	background: #202020;
+	height: 100vh;
+	color: #fff;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+a {
+	text-decoration: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.container {
+	max-width: 1100px;
+	margin: auto;
+	padding: 0 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.btn {
+	display: inline-block;
+	color: #fff;
+	background-color: #3fb573;
+	font-size: 1em;
+	text-align: center;
+	padding: 10px 15px;
+	border: 0;
+	margin: 10px 0;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+header {
+	height: 200px;
+}
+
+header img {
+	width: 200px;
+}
+
+.center {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.search {
+	height: 100px;
+}
+
+input[type='text'] {
+	display: block;
+	padding: 10px;
+	font-size: 20px;
+	border: 0;
+	border-radius: 5px;
+	width: 60%;
+	margin: auto;
+	outline: none;
+}
+
+.champ {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	padding-bottom: 10px;
+}
+
+.champ-img {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.champ-det {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	text-align: center;
+	padding-bottom: 60px;
+}
+
+.focus-img {
+	width: 50%;
+	border-radius: 5%;
+}
+
+.cards {
+	display: grid;
+	grid-template-columns: repeat(8, 1fr);
+	gap: 1rem;
+}
+
+.card {
+	cursor: pointer;
+	background-color: transparent;
+}
+
+.card-img {
+	width: 100%;
+}
+@media (max-width: 800px) {
+	.cards {
+		grid-template-columns: repeat(6, 1fr);
+	}
+}
+
+@media (max-width: 500px) {
+	.cards {
+		grid-template-columns: repeat(4, 1fr);
+	}
+	.card img {
+		width: 100%;
+		object-fit: contain;
+	}
 }
